--- a/index.html
+++ b/index.html
@@ -11,39 +11,40 @@
 
 <body>
     <div class="p-4 container border border-warning position-absolute top-50 start-50 translate-middle">
-        <input class="form-control" type="text" aria-label="Disabled input example" disabled>
+        <div><input id="AC" type="button" onclick="clearAll()" value="AC"/> <span id="answer">0</span></div>
         <br><br>
         <div class="row justify-content-evenly justify-content-center">
-                <div class="p-4 text-center border rounded border-dark col-1">1</div>
-                <div class="p-4 text-center border rounded border-dark col-1">2</div>
-                <div class="p-4 text-center border rounded border-dark col-1">3</div>
-                <div class="p-4 text-center border rounded border-dark col-1">+</div>
+            <input type="button"  onclick="numericButton('1')" value="1"/>
+            <input type="button"  onclick="numericButton('2')" value="2"/>
+            <input type="button"  onclick="numericButton('3')" value="3"/>
+            <input type="button" onclick="operatorButton('*')" value="*"/>
         </div>
         <br>
         <div class="row justify-content-evenly justify-content-center">
-                <div class="p-4 text-center border rounded border-dark col-1">4</div>
-                <div class="p-4 text-center border rounded border-dark col-1">5</div>
-                <div class="p-4 text-center border rounded border-dark col-1">6</div>
-                <div class="p-4 text-center border rounded border-dark col-1">-</div>
+            <input type="button"  onclick="numericButton('4')" value="4"/>
+            <input type="button" onclick="numericButton('5')" value="5"/>
+            <input type="button"  onclick="numericButton('6')" value="6"/>
+            <input type="button" onclick="operatorButton('-')" value="-"/>
         </div>
         <br>
         <div class="row justify-content-evenly justify-content-center">
-                <div class="p-4 text-center border rounded border-dark col-1">7</div>
-                <div class="p-4 text-center border rounded border-dark col-1">8</div>
-                <div class="p-4 text-center border rounded border-dark col-1">9</div>
-                <div class="p-4 text-center border rounded border-dark col-1">:</div>
+            <input type="button" onclick="numericButton('7')" value="7"/>
+            <input type="button" onclick="numericButton('8')" value="8"/>
+            <input type="button"  onclick="numericButton('9')" value="9"/>
+            <input type="button" onclick="operatorButton('+')" value="+"/>
         </div>
         <br>
         <div class="row justify-content-evenly justify-content-center">
-                <div class="p-4 text-center border rounded border-dark col-1">=</div>
-                <div class="p-4 text-center border rounded border-dark col-1">0</div>
-                <div class="p-4 text-center border rounded border-dark col-1">X</div>
-                <div class="p-4 text-center border rounded border-danger col-1">C</div>
+            <input type="button"  onclick="numericButton('0')" value="0"/>
+            <input type="button" onclick="numericButton('.')" value="."/>
+            <input id="equals" type="button"  onclick="calculateQueue(queue)" value="="/>
+            <input type="button" onclick="operatorButton('/')" value="/"/>
         </div>
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 
 </html>
